--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 # version = os.environ.get("HELLO_VERSION", "0.1.0-dev")
 # cog.out(f'version = "{version}"')
 # ]]]
-version = "0.1.1-dev202508122307"
+version = "0.1.1-dev202512170800"
 # [[[end]]]
 
 [project.scripts]
@@ -57,6 +57,7 @@ combine-as-imports = true
 [dependency-groups]
 dev = [
     "pytest>=8.4.1",
+    "pdoc>=14.0.0",
 ]
 
 [tool.pyright]
