--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,11 @@
 [project]
+# [[[cog
+# import os
+# project_name = os.environ.get("PROJECT_NAME", "hello")
+# cog.out(f'name = "{project_name}"')
+# ]]]
 name = "hello"
+# [[[end]]]
 description = "a project template"
 readme = "README.md"
 authors = [
@@ -11,14 +17,20 @@ dependencies = [
 ]
 # [[[cog
 # import os
-# version = os.environ.get("HELLO_VERSION", "0.1.0-dev")
+# version = os.environ.get("VERSION", "0.1.0-dev")
 # cog.out(f'version = "{version}"')
 # ]]]
-version = "0.2.0-dev202512170800"
+version = "0.1.0-dev202512170800"
 # [[[end]]]
 
 [project.scripts]
+# [[[cog
+# import os
+# project_name = os.environ.get("PROJECT_NAME", "hello")
+# cog.out(f'{project_name} = "{project_name}.cli:main"')
+# ]]]
 hello = "hello.cli:main"
+# [[[end]]]
 
 [build-system]
 requires = ["hatchling"]
